add endpoint - put usuario
add:
- enpoint PUT usuário com autenticação;
- função para formatação de numero de telefone.
