# swagger_output.json
@@ -115,6 +115,99 @@
             "description": "Internal Server Error"
           }
         }
+      },
+      "put": {
+        "tags": [
+          "Usuario"
+        ],
+        "description": "Endpoint para atualizar dados do usuário no sistema.",
+        "produces": [],
+        "parameters": [
+          {
+            "name": "dados",
+            "in": "body",
+            "description": "Dados para atualizar cadastro.",
+            "required": true,
+            "type": "object",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "example": "Usuario de teste atualizado"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "teste@teste.com"
+                },
+                "senha": {
+                  "type": "string",
+                  "example": "oloco"
+                },
+                "telefone": {
+                  "type": "string",
+                  "example": "11 99999-9999"
+                },
+                "tipo_usuario": {
+                  "type": "string",
+                  "example": "admin"
+                },
+                "endereco": {
+                  "type": "object",
+                  "properties": {
+                    "cep": {
+                      "type": "string",
+                      "example": "65603-710"
+                    },
+                    "rua": {
+                      "type": "string",
+                      "example": "Avenida das Andorinhas"
+                    },
+                    "bairro": {
+                      "type": "string",
+                      "example": "Raiz"
+                    },
+                    "numero": {
+                      "type": "string",
+                      "example": "298"
+                    },
+                    "cidade": {
+                      "type": "string",
+                      "example": "Caxias"
+                    },
+                    "estado": {
+                      "type": "string",
+                      "example": "MA"
+                    },
+                    "tipo": {
+                      "type": "string",
+                      "example": "fisico"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ]
       }
     },
     "/usuario/login": {
